@@ -9,6 +9,16 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-11-22  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/o_move.c, x_event.c, o_basic.c: Finished adding the code to 
+          support the netconn-rubberband rc keyword
+
+2000-11-21  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/g_rc.c and friends: Added netconn-rubberband rc keyword
+	  which controls if the net connection rubberband code is enabled
+
 2000-11-16  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/o_move.c: Added support to the various o_move_* functions
